Add descriptions to powerplant types in Register #119

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -108,33 +108,29 @@
                         <legend>Choose one powerplant type
                           <i class="icon ion-information-circled icon--small" title="Informationen zum Inhalt"></i>
                         </legend>
-                        <div>
+                        <div title="Photovoltaic Power Plants (1,558,217 in Germany)">
                           <input type="radio" name="generation_type" value="solar" id="Solar" required checked>
-                          <label for="Solar">Photovoltaic-plant</label>
+                          <label for="Solar">Solar</label>
                         </div>
-                        <div>
+                        <div title="Onshore Wind Turbines (25,157 in Germany)">
                           <input type="radio" name="generation_type" value="wind" id="Wind">
-                          <label for="Wind">Wind-turbines</label>
+                          <label for="Wind">Wind</label>
                         </div>
-                        <div>
+                        <div title="Geothermal Power Plants (30 in Germany)">
                           <input type="radio" name="generation_type" value="geothermal" id="Geothermal">
-                          <label for="Geothermal">Geothermal-plants</label>
+                          <label for="Geothermal">Geothermal</label>
                         </div>
-                        <div>
+                        <div title="Run of the River Water Turbines (7,491 in Germany)">
                           <input type="radio" name="generation_type" value="run_of_river" id="Run_of_river">
-                          <label for="Run_of_river">Hydropower-plant</label>
+                          <label for="Run_of_river">Hydro</label>
                         </div>
-                        <div>
+                        <div title="Natural Gas Power Plants (261 in Germany)">
                           <input type="radio" name="generation_type" value="gas" id="Gas">
-                          <label for="Gas">Gaspower-plant</label>
+                          <label for="Gas">Gas</label>
                         </div>
-                        <div>
-                          <input type="radio" name="generation_type" value="reservoir" id="Reservoir">
-                          <label for="Reservoir">Pumped-storage-powerplant</label>
-                        </div>
-                        <div>
+                        <div title="Biomass Powered Plants (4,382 In Germany)">
                           <input type="radio" name="generation_type" value="biomass" id="Biomass">
-                          <label for="Biomass">Biogas-plant</label>
+                          <label for="Biomass">Biomass</label>
                         </div>
                       </fieldset>
                     </form>
