Try to implement welcome text popup

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -146,7 +146,7 @@
                     <p>Click on the map to load the closest weather data points. You can then click on one of the loaded points to to display the weather data over the selected time period for a given height and variable. The download can take some
                       time, depending on how many data you required. </p>
 
-
+                    <div>{{texts.welcome}}</div>
 
 
                     <div id="wd-forms">
