--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -75,13 +75,13 @@
             <div class="grid-x">
               <div class="cell small-3 offcanvas-tabs__wrapper medium-cell-block-y">
                 <ul class="vertical tabs" data-tabs id="offcanvas-tabs">
-                  <li class="tabs-title">
+                  <li class="tabs-title is-active">
                     <a href="#panel-welcome">
                       <img src="{% static 'WAM_APP_FRED/img/tab_icons/info.svg' %}">
                       <h2 class="tabs-title__head">Welcome</h2>
                     </a>
                   </li>
-                  <li class="tabs-title is-active">
+                  <li class="tabs-title">
                     <a href="#panel-energy-system">
                       <img src="{% static 'WAM_APP_FRED/img/tab_icons/weather.svg' %}">
                       <h2 class="tabs-title__head">Weather Data</h2>
@@ -106,7 +106,7 @@
                 <div class="tabs-content" data-tabs-content="offcanvas-tabs" id="fred-tabs">
 
                   <!-- Welcome panel content -->
-                  <div class="tabs-panel" id="panel-welcome">
+                  <div class="tabs-panel is-active" id="panel-welcome">
                     <h4>Welcome</h4>
                       <p>This tool can be used to get an example overview of the data used and generated in the project <a href="https://reiner-lemoine-institut.de/open_fred-open-feed-time-series-based-renewable-energy-database/">OpenFRED</a>. OpenFRED stands for open Feed-in time series based on a Renewable Energy Database. The goal was to take weather and powerplant data and calculate the resulting energy feedin over time. It is possible to display and download a subset of the very large datasets. Full data can be accessed via the <a href="https://openenergy-platform.org/">OpenEnergyPlatform</a> (OEP).</p>
                       <h5> Weather Data </h5>
@@ -156,7 +156,7 @@
                   </div>
 
                   <!-- Second panel content -->
-                  <div class="tabs-panel is-active" id="panel-energy-system">
+                  <div class="tabs-panel" id="panel-energy-system">
                     <h4>Weather Data</h4>
                     <p>Click on the map to load the closest weather data points. You can then click on one of the loaded points to to display the weather data over the selected time period for a given height and variable. The download can take some
                       time, depending on how many data you required. </p>
