--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -317,6 +317,27 @@
       popupAnchor: [0, -20] // point from which the popup should open relative to the iconAnchor
     });
 
+    const powerPlantIcons = {
+      solar_roof_mounted: solarRoofIcon,
+      solar_ground_mounted: solarGroundIcon,
+      solar: solarGroundIcon,
+      biomass: biomassIcon,
+      biogas: biomassIcon,
+      biogas_dry_fermentation: biomassIcon,
+      biofuel: biomassIcon,
+      wind_offshore: windOffIcon,
+      wind_onshore: windOnIcon,
+      hydro: hydroIcon,
+      geothermal: powerPlantIcon,
+      gas: powerPlantIcon,
+      biogas_from_grid: powerPlantIcon,
+      gas_mine: powerPlantIcon,
+      gas_sewage: powerPlantIcon,
+      gas_landfill: powerPlantIcon,
+      wood: powerPlantIcon,
+      waste_wood: powerPlantIcon,
+    };
+
     var highlightStyle = {
       opacity: 0.7,
       weight: 2,
@@ -864,76 +885,6 @@
             icon: solarRoofIcon
           });
         }
-        if (feature.properties.generation_subtype == "solar_ground_mounted") {
-          marker.setIcon({
-            icon: solarGroundIcon
-          });
-        }
-        if (feature.property.generation_subtype == "solar") {
-          marker.setIcon({
-            icon: solarGroundIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "biomass") {
-          marker.setIcon({
-            icon: biomassIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "biogas") {
-          marker.setIcon({
-            icon: biomassIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "biogas_dry_fermentation") {
-          marker.setIcon({
-            icon: biomassIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "biofuel") {
-          marker.setIcon({
-            icon: biomassIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "wind_offshore") {
-          marker.setIcon({
-            icon: windOffIcon
-          });
-        }
-        if (feature.properties.generation_subtype === "wind_onshore") {
-          marker.setIcon({
-            icon: windOnIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "hydro") {
-          marker.setIcon({
-            icon: hydroIcon
-          });
-        }
-        if (feature.properties.generation_subtype == "geothermal") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "gas") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "biogas_from_grid") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "gas_mine") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "gas_sewage") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "gas_landfill") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "wood") {
-          // insert icon not availabe -> add when available
-        }
-        if (feature.properties.generation_subtype == "waste_wood") {
-          // insert icon not availabe -> add when available
-        }
-        return marker
       }
 
       //PowePlantRegister EndSection
