Add loadtime warning for weather popups

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -537,6 +537,8 @@
         onEachFeature: function(feature, layer) {
           layer.on('mouseover', function() {
             this.setStyle(highlightStyleMouseOver);
+            this.bindTooltip("<div >⌛ Load weather data <br> (will take a minute) <div").openTooltip();
+            // alert("lerty")
           });
           layer.on('click', function() {
             this.setStyle(highlightStyle);
