Rename generic term "variable" to technology #66

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -185,7 +185,7 @@
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
                     <p>
-                      Select a variable and a time span, then click on a region highlighted on the map. The data will be displayed on a graph inside a popup.
+                      Select a technology and click on one of the regions on the map. The data will be displayed on a graph inside a popup.
                       Currently the plot in the popup window
                       shows data received from a test data set.
                     </p>
