Add description for infobutton in pp-tab #66

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -126,7 +126,7 @@
                     <form>
                       <fieldset>
                         <legend>Choose one powerplant type
-                          <i class="icon ion-information-circled icon--small" title="Informationen zum Inhalt"></i>
+                          <i class="icon ion-information-circled icon--small" title="Hover over any power plant type to see its installed number in Germany"></i>
                         </legend>
                         <div title="Photovoltaic Power Plants (1,558,217 in Germany)">
                           <input type="radio" name="generation_type" value="solar" id="Solar" required checked>
