Add headline in Feedin-tab

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -184,10 +184,11 @@
 
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
+                    <h4>Feedin-Time Series</h4>
                     <p>
-                      Select a technology and click on one of the regions on the map. The data will be displayed on a graph inside a popup.
+                      Select a technology and click on one of the regions in the map. The energy fed into the electricity grid will be displayed on a graph inside a popup.
                       Currently the plot in the popup window
-                      shows data received from a test data set.
+                      shows calculated data that still need to be revised.
                     </p>
                     <div id="fd-forms">
 
