--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -160,7 +160,7 @@
                   <div class="tabs-panel" id="panel-energy-system">
                     <h4>Weather Data</h4>
                     <p>Click on the map to load the closest weather data points. You can then click on one of the loaded points to to display the weather data over the selected time period for a given height and variable. The download can take some
-                      time, depending on how many data you required. </p>
+                      time, depending on how much data you required. </p>
 
 
 
